# dongle

./: .gitignore  pyproject.toml
dongle/: cli.py  utils.py
tests/: test_dongle.py
